Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I80896e28e7043686f93756f82ed2c9beeac62df1

--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -3145,7 +3145,7 @@
     <string name="notification_history_view_settings" msgid="5269317798670449002">"مشاهده تنظیمات اعلان"</string>
     <string name="notification_history_open_notification" msgid="2655071846911258371">"باز کردن اعلان"</string>
     <string name="snooze_options_title" msgid="2109795569568344617">"مجاز کردن تعویق اعلان"</string>
-    <string name="notification_badging_title" msgid="5469616894819568917">"نقطه‌های اعلان در نماد برنامه"</string>
+    <string name="notification_badging_title" msgid="5469616894819568917">"نقطه اعلان روی نماد برنامه‌ها"</string>
     <string name="notification_bubbles_title" msgid="5681506665322329301">"حبابک‌ها"</string>
     <string name="bubbles_app_toggle_title" msgid="5319021259954576150">"حبابک‌ها"</string>
     <string name="bubbles_conversation_toggle_title" msgid="5225039214083311316">"نمایش مکالمه به‌صورت حباب"</string>
