--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -3443,7 +3443,7 @@
     <string name="zen_mode_all_callers" msgid="8104755389401941875">"सभी के कॉल"</string>
     <string name="zen_mode_contacts_callers" msgid="5429267704011896833">"संपर्क"</string>
     <string name="zen_mode_starred_callers" msgid="1002370699564211178">"स्टार के निशान वाले संपर्क"</string>
-    <string name="zen_mode_repeat_callers_list" msgid="181819778783743847">"15 मिनट में दूसरी बार काॅल करने वाले (कॉलर)"</string>
+    <string name="zen_mode_repeat_callers_list" msgid="181819778783743847">"15 मिनट में दूसरी बार काॅल करने वाले"</string>
     <!-- no translation found for zen_mode_calls_summary_one (1928015516061784276) -->
     <skip />
     <string name="zen_mode_calls_summary_two" msgid="6351563496898410742">"<xliff:g id="CALLER_TYPE_0">%1$s</xliff:g> और <xliff:g id="CALLER_TYPE_1">%2$s</xliff:g>"</string>
