--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -349,7 +349,7 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_title_2" msgid="2580899232734177771">"仕組み"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_2" msgid="5909924864816776516">"指紋認証は、さまざまな角度から指紋の画像を撮影して固有モデルを作成して、本人確認に使用します。"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_2" msgid="3493356605815124807">"指紋認証は、お子様の指紋の固有モデルを作成し、本人確認に使用します。モデルの作成では、さまざまな角度から指紋の画像を撮影します。"</string>
-    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"最適な結果を得るには、Made For Google 認定の画面保護シートを使用してください。認定されていないシートを使うと、指紋が認識されない可能性があります。"</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"最適な結果を得るには、Made For Google 認定の画面保護シートを使用してください。これ以外の画面保護シートを使うと、指紋が認識されないおそれがあります。"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"最適な結果を得るには、Made For Google 認定の画面保護シートを使用してください。認定されていないシートを使うと、お子様の指紋が認識されない可能性があります。"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_activeunlock_preference_title" msgid="4257580421087062228">"ウォッチ認証"</string>
@@ -3438,12 +3438,12 @@
     <string name="zen_mode_people_none" msgid="4613147461974255046">"割り込み可能なユーザーはいません"</string>
     <string name="zen_mode_people_some" msgid="9101872681298810281">"一部のユーザーが割り込み可能"</string>
     <string name="zen_mode_people_all" msgid="311036110283015205">"すべてのユーザーが割り込み可能"</string>
-    <string name="zen_mode_repeat_callers" msgid="2270356100287792138">"同一発信者による再着信"</string>
-    <string name="zen_mode_repeat_callers_title" msgid="8016699240338264781">"同一発信者による再着信に割り込みを許可"</string>
+    <string name="zen_mode_repeat_callers" msgid="2270356100287792138">"同一番号からの再着信"</string>
+    <string name="zen_mode_repeat_callers_title" msgid="8016699240338264781">"同一番号からの再着信に割り込みを許可"</string>
     <string name="zen_mode_all_callers" msgid="8104755389401941875">"全員"</string>
     <string name="zen_mode_contacts_callers" msgid="5429267704011896833">"連絡先"</string>
     <string name="zen_mode_starred_callers" msgid="1002370699564211178">"スター付きの連絡先"</string>
-    <string name="zen_mode_repeat_callers_list" msgid="181819778783743847">"同一発信者による再着信"</string>
+    <string name="zen_mode_repeat_callers_list" msgid="181819778783743847">"同一番号からの再着信"</string>
     <!-- no translation found for zen_mode_calls_summary_one (1928015516061784276) -->
     <skip />
     <string name="zen_mode_calls_summary_two" msgid="6351563496898410742">"<xliff:g id="CALLER_TYPE_0">%1$s</xliff:g>、<xliff:g id="CALLER_TYPE_1">%2$s</xliff:g>"</string>
