--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -3401,7 +3401,7 @@
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"ไม่มี"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"ไม่มี"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"การปลุก"</string>
-    <string name="zen_mode_alarms_summary" msgid="3388679177457223967">"จากตัวจับเวลา การปลุก ระบบรักษาความปลอดภัย และแอปอื่นๆ"</string>
+    <string name="zen_mode_alarms_summary" msgid="3388679177457223967">"จากตัวจับเวลา การปลุก ระบบรักษาความปลอดภัย และ​แอปอื่นๆ"</string>
     <string name="zen_mode_alarms_list" msgid="334782233067365405">"การปลุก"</string>
     <string name="zen_mode_alarms_list_first" msgid="2780418316613576610">"การปลุก"</string>
     <string name="zen_mode_media" msgid="885017672250984735">"เสียงสื่อ"</string>
