Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ibca62b8b3da79612823fb9012ba26203922a3e42

--- a/res/values-af/strings.xml
+++ b/res/values-af/strings.xml
@@ -2000,7 +2000,7 @@
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Hoër kontras laat teks, knoppies en ikone meer uitstaan. Kies die kontras wat vir jou die beste lyk."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"Sommige apps steun dalk nie alle kleur- en tekskontrasinstellings nie"</string>
     <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"Verstel hoe kleure en teks teen jou skerm se agtergrondkleur lyk"</string>
-    <string name="color_contrast_preview" msgid="6791430227535363883">"Voorbeskou"</string>
+    <string name="color_contrast_preview" msgid="6791430227535363883">"Voorskou"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Helen, Adam"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"2 dae gelede"</string>
     <string name="color_contrast_preview_email_badge" msgid="4845484039428505392">"Volg op?"</string>
@@ -3652,7 +3652,7 @@
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Geen"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Geen"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Wekkers"</string>
-    <string name="zen_mode_alarms_summary" msgid="3388679177457223967">"Van aftellers, wekkers, sekuriteitstelsels en ander programme af"</string>
+    <string name="zen_mode_alarms_summary" msgid="3388679177457223967">"Van aftellers, wekkers, sekuriteitstelsels en ander apps af"</string>
     <string name="zen_mode_alarms_list" msgid="334782233067365405">"wekkers"</string>
     <string name="zen_mode_alarms_list_first" msgid="2780418316613576610">"Wekkers"</string>
     <string name="zen_mode_media" msgid="885017672250984735">"Mediaklanke"</string>
