--- a/res/values-kk/strings.xml
+++ b/res/values-kk/strings.xml
@@ -1996,9 +1996,9 @@
     <string name="general_category_title" msgid="6298579528716834157">"Жалпы"</string>
     <string name="display_category_title" msgid="6638191682294461408">"Дисплей"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Түс және қозғалыс"</string>
-    <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Түс конрасты"</string>
+    <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Түс конрасы"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Жоғары контраст мәтінді, түймелерді және белгішелерді ерекшелейді. Өзіңізге ұнайтын контрасты таңдаңыз."</string>
-    <string name="color_contrast_note" msgid="7592686603372566198">"Кейбір қолданбалар барлық түс және мәтін контрасты параметрін қолдамауы мүмкін."</string>
+    <string name="color_contrast_note" msgid="7592686603372566198">"Кейбір қолданбалар түс және мәтін контрасының барлық параметрін қолдамауы мүмкін."</string>
     <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"Түстер мен мәтінді экран фонына сәйкестендіріп реттеу"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"Алғы көрініс"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Хелен, Адам"</string>
@@ -2363,7 +2363,7 @@
     <string name="keywords_select_to_speak" msgid="2872704811610888719"></string>
     <string name="keywords_color_correction" msgid="8540442886990423681">"түсті реттеу"</string>
     <string name="keywords_color_inversion" msgid="4291058365873221962">"қараңғы экранды қосу, жарық экранды қосу"</string>
-    <string name="keywords_contrast" msgid="4668393735398949873">"түс конрасты"</string>
+    <string name="keywords_contrast" msgid="4668393735398949873">"түс конрасы"</string>
     <string name="keywords_accessibility_menu" msgid="4300579436464706608"></string>
     <string name="keywords_switch_access" msgid="5813094504384313402"></string>
     <string name="keywords_auto_click" msgid="6811744211216280998">"қозғалыс, тінтуір, кәдімгі тінтуір, баспен басқарылатын тінтуір, адаптивті тінтуір, мүгедектер арбасы, джойстик"</string>
@@ -3652,7 +3652,7 @@
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Ешқандай қоңырауға рұқсат жоқ"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Жоқ"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Оятқыштар"</string>
-    <string name="zen_mode_alarms_summary" msgid="3388679177457223967">"Таймерден, оятқыштан, қауіпсіздік жүйесінен және басқа қолданбалардан шығатын дабыл"</string>
+    <string name="zen_mode_alarms_summary" msgid="3388679177457223967">"Таймерлерден, оятқыштардан, қауіпсіздік жүйелерінен және басқа қолданбалардан шығатын сигнал"</string>
     <string name="zen_mode_alarms_list" msgid="334782233067365405">"оятқыштар"</string>
     <string name="zen_mode_alarms_list_first" msgid="2780418316613576610">"Оятқыштар"</string>
     <string name="zen_mode_media" msgid="885017672250984735">"Mультимeдиа дыбыстары"</string>
