--- a/res/values-lo/strings.xml
+++ b/res/values-lo/strings.xml
@@ -1997,7 +1997,7 @@
     <string name="display_category_title" msgid="6638191682294461408">"ການສະແດງຜົນ"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"ສີ ແລະ ໂມຊັນ"</string>
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"ຄວາມຄົມຊັດຂອງສີ"</string>
-    <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"ຄວາມຄົມຊັດທີ່ສູງຂຶ້ນເຮັດໃຫ້ຂໍ້ຄວາມ, ປຸ່ມ, ແລະ ໄອຄອນໂດດເດັ່ນຫຼາຍຂຶ້ນ. ເລືອກຮູບລັກຄວາມຄົມຊັດທີ່ດີທີ່ສຸດສໍາລັບທ່ານ."</string>
+    <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"ຄວາມຄົມຊັດທີ່ສູງຂຶ້ນເຮັດໃຫ້ຂໍ້ຄວາມ, ປຸ່ມ ແລະ ໄອຄອນໂດດເດັ່ນຫຼາຍຂຶ້ນ. ເລືອກຮູບລັກຄວາມຄົມຊັດທີ່ດີທີ່ສຸດສໍາລັບທ່ານ."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"ບາງແອັບອາດຈະບໍ່ຮອງຮັບການຕັ້ງຄ່າສີ ແລະ ຄວາມຄົມຊັດຂໍ້ຄວາມທັງໝົດ"</string>
     <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"ປັບແກ້ຮູບລັກສີ ແລະ ຂໍ້ຄວາມກັບສີພື້ນຫຼັງຂອງໜ້າຈໍຂອງທ່ານ"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"ຕົວຢ່າງ"</string>
@@ -2006,7 +2006,7 @@
     <string name="color_contrast_preview_email_badge" msgid="4845484039428505392">"ຕິດຕາມຜົນບໍ?"</string>
     <string name="color_contrast_preview_email_title" msgid="198712116139754823">"ລາຍ​ງານການເດີນທາງເພື່ອທຸລະກິດ"</string>
     <string name="color_contrast_preview_email_body" msgid="4139331665325624199">"ສຳລັບຄວາມຊ່ວຍເຫຼືອເພີ່ມເຕີມ, ກະລຸນາຕິດຕໍ່ຫາ \nຂ້ອຍເອງ ຫຼື Helen. ລາຍງານນີ້ຈະເປັນ"</string>
-    <string name="color_contrast_preview_email_attachment_name" msgid="852407311884814746">"ຄ່າໃຊ້ຈ່າຍຂອງລູກຂ່າຍ"</string>
+    <string name="color_contrast_preview_email_attachment_name" msgid="852407311884814746">"ຄ່າໃຊ້ຈ່າຍຂອງລູກຄ້າ"</string>
     <string name="accessibility_turn_screen_darker_title" msgid="5986223133285858349">"ເຮັດໃຫ້ໜ້າຈໍມືດລົງ"</string>
     <string name="interaction_control_category_title" msgid="2696474616743882372">"ການຄວບຄຸມການໂຕ້ຕອບ"</string>
     <string name="accessibility_tap_assistance_title" msgid="1058913033421048284">"ການຄວບຄຸມຊ່ວງເວລາ"</string>
