--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -3934,7 +3934,7 @@
     <string name="keywords_vr_listener" msgid="902737490270081131">"rv realidade virtual serviço de escuta estéreo serviço assistente"</string>
     <string name="overlay_settings" msgid="2030836934139139469">"Sobrepor a outras apps"</string>
     <string name="filter_overlay_apps" msgid="2483998217116789206">"Apps com autorização"</string>
-    <string name="app_permission_summary_allowed" msgid="1155115629167757278">"Permitida"</string>
+    <string name="app_permission_summary_allowed" msgid="1155115629167757278">"Permitido"</string>
     <string name="app_permission_summary_not_allowed" msgid="2673793662439097900">"Não permitida"</string>
     <string name="keywords_install_other_apps" msgid="563895867658775580">"instalar apps de fontes desconhecidas"</string>
     <string name="write_settings" msgid="6864794401614425894">"Modificar definições do sistema"</string>
