--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -308,7 +308,7 @@
     <string name="security_settings_face_enroll_introduction_accessibility_diversity" msgid="2774962371839179206"></string>
     <string name="security_settings_face_enroll_introduction_accessibility_vision" msgid="7700394302162170363"></string>
     <string name="security_settings_face_enroll_introduction_cancel" msgid="7551159644361639436">"Zrušit"</string>
-    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"Ne, děkuji"</string>
+    <string name="security_settings_face_enroll_introduction_no_thanks" msgid="1820618982738898717">"Ne, díky"</string>
     <string name="security_settings_face_enroll_introduction_agree" msgid="6319476573697497750">"Souhlasím"</string>
     <string name="security_settings_face_enroll_introduction_more" msgid="1970820298889710532">"Další"</string>
     <string name="security_settings_face_enroll_introduction_title" msgid="7061610077237098046">"Odemykání pomocí obličeje"</string>
@@ -1998,12 +1998,12 @@
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Barvy a pohyb"</string>
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Barevný kontrast"</string>
     <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Text, tlačítka a ikony při vyšším kontrastu více vyniknou. Vyberte kontrast, který vám nejvíc vyhovuje."</string>
-    <string name="color_contrast_note" msgid="7592686603372566198">"Některé aplikace nemusí podporovat všechna nastavení kontrastu barev a textu"</string>
+    <string name="color_contrast_note" msgid="7592686603372566198">"Některé aplikace nemusí podporovat všechna nastavení kontrastu barev a textu."</string>
     <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"Upravit vzhled barev a textu vůči barvě pozadí obrazovky"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"Náhled"</string>
     <string name="color_contrast_preview_sender_name" msgid="8641943417589238147">"Helen, Adam"</string>
     <string name="color_contrast_preview_email_send_date" msgid="2108702726171600080">"před 2 dny"</string>
-    <string name="color_contrast_preview_email_badge" msgid="4845484039428505392">"Sledovat?"</string>
+    <string name="color_contrast_preview_email_badge" msgid="4845484039428505392">"Reagovat?"</string>
     <string name="color_contrast_preview_email_title" msgid="198712116139754823">"Hlášení o služební cestě"</string>
     <string name="color_contrast_preview_email_body" msgid="4139331665325624199">"Pokud potřebujete pomoct, obraťte se na \nmě nebo na Helen. Toto hlášení bude"</string>
     <string name="color_contrast_preview_email_attachment_name" msgid="852407311884814746">"Klientské výdaje"</string>
