--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -1997,7 +1997,7 @@
     <string name="display_category_title" msgid="6638191682294461408">"Zaslon"</string>
     <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Boja i pokret"</string>
     <string name="accessibility_color_contrast_title" msgid="5757724357142452378">"Kontrast boja"</string>
-    <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Veći kontrast omogućuje da se tekst, gumbi i ikone bolje istaknu. Odaberite kontrast koji vam se čini najbolji."</string>
+    <string name="accessibility_color_contrast_intro" msgid="7795090401101214930">"Veći kontrast omogućuje da se tekst, gumbi i ikone bolje istaknu. Odaberite kontrast koji vam najbolje odgovara."</string>
     <string name="color_contrast_note" msgid="7592686603372566198">"Neke aplikacije možda ne podržavaju sve postavke kontrasta boja i teksta"</string>
     <string name="accessibility_color_contrast_summary" msgid="7563237683500106632">"Prilagodite kako boje i tekst izgledaju u odnosu na boju pozadine zaslona"</string>
     <string name="color_contrast_preview" msgid="6791430227535363883">"Pregled"</string>
@@ -2704,7 +2704,7 @@
     <string name="select_device_admin_msg" msgid="5501360309040114486">"Aplikacije administratora uređaja"</string>
     <string name="no_device_admins" msgid="8888779888103079854">"Nema dostupnih aplikacija administratora uređaja"</string>
     <string name="no_trust_agents" msgid="8659098725864191600">"Agenti za pouzdanost nisu dostupni"</string>
-    <string name="add_device_admin_msg" msgid="7730006568970042119">"Aktivirati apl. administratora uređaja?"</string>
+    <string name="add_device_admin_msg" msgid="7730006568970042119">"Aktivirati administratorsku aplikaciju uređaja?"</string>
     <string name="add_device_admin" msgid="6252128813507932519">"Aktiviraj tu administratorsku aplikaciju uređaja"</string>
     <string name="device_admin_add_title" msgid="6087481040932322289">"Administrator uređaja"</string>
     <string name="device_admin_warning" msgid="1889160106787280321">"Aktiviranjem ove administratorske aplikacije dopustit ćete aplikaciji <xliff:g id="APP_NAME">%1$s</xliff:g> izvođenje sljedećih radnji:"</string>
@@ -3652,7 +3652,7 @@
     <string name="zen_mode_none_calls" msgid="2047166006414016327">"Nitko"</string>
     <string name="zen_mode_none_messages" msgid="1386626352943268342">"Nitko"</string>
     <string name="zen_mode_alarms" msgid="5989343060100771099">"Alarmi"</string>
-    <string name="zen_mode_alarms_summary" msgid="3388679177457223967">"Alarmi odbrojavanja, sata, sigurnosnih sustava i drugih aplikacija"</string>
+    <string name="zen_mode_alarms_summary" msgid="3388679177457223967">"Obavijesti tajmera, alarma, sigurnosnih sustava i drugih aplikacija"</string>
     <string name="zen_mode_alarms_list" msgid="334782233067365405">"alarmi"</string>
     <string name="zen_mode_alarms_list_first" msgid="2780418316613576610">"Alarmi"</string>
     <string name="zen_mode_media" msgid="885017672250984735">"Zvukovi medija"</string>
@@ -3660,7 +3660,7 @@
     <string name="zen_mode_media_list" msgid="2006413476596092020">"mediji"</string>
     <string name="zen_mode_media_list_first" msgid="7824427062528618442">"Mediji"</string>
     <string name="zen_mode_system" msgid="7301665021634204942">"Zvukovi dodirivanja"</string>
-    <string name="zen_mode_system_summary" msgid="7225581762792177522">"Zvukovi tipkovnice i drugih gumba"</string>
+    <string name="zen_mode_system_summary" msgid="7225581762792177522">"Zvukovi tipkovnice i drugih tipki"</string>
     <string name="zen_mode_system_list" msgid="2256218792042306434">"zvukovi dodirivanja"</string>
     <string name="zen_mode_system_list_first" msgid="8590078626001067855">"Zvukovi dodirivanja"</string>
     <string name="zen_mode_reminders" msgid="1970224691551417906">"Podsjetnici"</string>
@@ -4843,8 +4843,8 @@
     <string name="default_active_sim_sms" msgid="8041498593025994921">"SMS"</string>
     <string name="default_active_sim_mobile_data" msgid="6798083892814045301">"mobilne podatke"</string>
     <string name="wifi_scan_notify_message" msgid="1331238142061476869">"Radi boljeg doživljaja na uređaju, aplikacije i usluge i dalje mogu tražiti Wi‑Fi mreže u bilo kojem trenutku, čak i kada je Wi‑Fi isključen. Time se primjerice mogu poboljšati značajke i usluge koje se temelje na lokaciji. To možete promijeniti u postavkama traženja Wi-Fija."</string>
-    <string name="wifi_scan_change" msgid="8438320311511852918">"Promijeni"</string>
-    <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g>/<xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
+    <string name="wifi_scan_change" msgid="8438320311511852918">"Promijenite"</string>
+    <string name="preference_summary_default_combination" msgid="4643585915107796253">"<xliff:g id="STATE">%1$s</xliff:g> / <xliff:g id="NETWORKMODE">%2$s</xliff:g>"</string>
     <string name="mobile_data_connection_active" msgid="2422223108911581552">"Povezano"</string>
     <string name="mobile_data_temp_connection_active" msgid="3430470299756236413">"Privremeno povezano"</string>
     <string name="mobile_data_temp_using" msgid="5211002380149434155">"Privremeno koristite <xliff:g id="SUBNAME">%1$s</xliff:g>"</string>
@@ -4978,7 +4978,7 @@
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Potvrdi"</string>
     <string name="dream_preview_button_title" msgid="6637456541851795952">"Isprobaj"</string>
-    <string name="dream_picker_category" msgid="7726447836872744867">"Odabir čuvara zaslona"</string>
+    <string name="dream_picker_category" msgid="7726447836872744867">"Odaberite čuvar zaslona"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Prikaži dodatne informacije"</string>
     <string name="dream_complications_toggle_summary" msgid="8088911054987524904">"Čuvar zaslona prikazuje vrijeme, vremenske uvjete i druge informacije"</string>
     <string name="dream_home_controls_toggle_title" msgid="706799741564479248">"Prikaži upravljanje kućanskim uređajima"</string>
@@ -5103,7 +5103,7 @@
     <string name="color_inversion_state_on" msgid="1160969033636440368">"Uključeno"</string>
     <string name="color_inversion_state_off" msgid="6925638668080451724">"Isključeno"</string>
     <string name="color_inversion_feature_summary" msgid="1199876648549627647">"Svijetli zasloni postaju tamni, a tamni zasloni svijetli"</string>
-    <string name="magnification_feature_summary" msgid="2053971569640663564">"Povećaj na zaslonu"</string>
+    <string name="magnification_feature_summary" msgid="2053971569640663564">"Povećajte na zaslonu"</string>
     <string name="autoclick_disabled" msgid="3213396804955002120">"Isključeno"</string>
     <string name="show_captions_disabled" msgid="690650956523818755">"Isključeno"</string>
     <string name="show_captions_enabled" msgid="7089043007924626">"Uključeno"</string>
