Revise the order in the strings to make "Face" in front of "Fingerprint" except for "Choose a screen lock" screen
Change the string order to fulfill the UX requirement.

Flag: EXEMPT bugfix

Bug: 293396928

Test: Build ABTD ROM and check the string order.
Change-Id: I4725e22e16ea20ea774383d0c67038479805e6fa

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -995,7 +995,7 @@
 
     <!-- Biometric settings --><skip />
     <!-- Title shown for menu item that launches biometric settings. [CHAR LIMIT=66] -->
-    <string name="security_settings_biometric_preference_title">Fingerprint &amp; Face Unlock</string>
+    <string name="security_settings_biometric_preference_title">Face &amp; Fingerprint Unlock</string>
     <!-- Title shown for work menu item that launches biometric settings. [CHAR LIMIT=66] -->
     <string name="security_settings_work_biometric_preference_title">Face &amp; Fingerprint Unlock for work</string>
     <!-- Message shown in summary field of biometric settings. [CHAR LIMIT=66] -->
