Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I3a4f2a5e07c25e372b93886f284f962b833b6946

--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -1238,8 +1238,8 @@
     <string name="apn_mnc" msgid="1926382406843447854">"এমএনচি"</string>
     <string name="apn_auth_type" msgid="4234397513494356932">"বিশ্বাসযোগ্যতা প্ৰমাণীকৰণৰ ধৰণ"</string>
     <string name="apn_type" msgid="1835573305077788773">"এপিএনৰ প্ৰকাৰ"</string>
-    <string name="apn_protocol" msgid="181529867160380010">"এপিএনৰ নিয়মপ্ৰণালী"</string>
-    <string name="apn_roaming_protocol" msgid="1645131094105362513">"এপিএন ৰ\'মিঙৰ নিয়মপ্ৰণালী"</string>
+    <string name="apn_protocol" msgid="181529867160380010">"এপিএনৰ প্ৰ্ৰ\'টকল"</string>
+    <string name="apn_roaming_protocol" msgid="1645131094105362513">"এপিএন ৰ\'মিঙৰ প্ৰ্ৰ\'টকল"</string>
     <string name="carrier_enabled" msgid="664074151573150130">"এপিএন সক্ষম/অক্ষম কৰক"</string>
     <string name="carrier_enabled_summaryOn" msgid="5212067975273903381">"APN সক্ষম হৈছে"</string>
     <string name="carrier_enabled_summaryOff" msgid="8541959867953738521">"এপিএন অক্ষম কৰা হৈছে"</string>
