--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -65,7 +65,7 @@
     <string name="bluetooth_pair_other_ear_dialog_left_ear_positive_button" msgid="6500192653171220257">"बायाँ भाग कनेक्ट गर्नुहोस्"</string>
     <string name="bluetooth_device_controls_general" msgid="1399214835599665488">"उपलब्ध सबै श्रवण यन्त्रसम्बन्धी कन्ट्रोलहरू"</string>
     <string name="bluetooth_device_controls_title" msgid="1895676556354697234">"श्रवण यन्त्रसम्बन्धी सेटिङ"</string>
-    <string name="bluetooth_device_controls_summary" msgid="8115767735418425663">"सर्टकट, श्रवण सहयोगसम्बन्धी कम्प्याटिबिलिटी"</string>
+    <string name="bluetooth_device_controls_summary" msgid="8115767735418425663">"सर्टकट, हियरिङ डिभाइस कम्प्याटिबिलिटी"</string>
     <string name="bluetooth_device_controls_specific" msgid="7706863288754077107">"यो डिभाइससम्बन्धी कन्ट्रोलहरू"</string>
     <string name="bluetooth_audio_routing_title" msgid="5541729245424856226">"अडियो आउटपुट"</string>
     <string name="bluetooth_audio_routing_about_title" msgid="5773336779246891954">"अडियो आउटपुटका बारेमा"</string>
@@ -2015,7 +2015,7 @@
     <string name="accessibility_hearing_device_saved_title" msgid="7573926212664909296">"सेभ गरिएका डिभाइस"</string>
     <string name="accessibility_hearing_device_control" msgid="2661965917013100611">"हियरिङ डिभाइस नियन्त्रण गर्ने विजेटहरू"</string>
     <string name="accessibility_hearing_device_shortcut_title" msgid="7645100199603031360">"हियरिङ डिभाइसको सर्टकट"</string>
-    <string name="accessibility_hac_mode_title" msgid="2037950424429555652">"श्रवण सहयोगसम्बन्धी कम्प्याटिबिलिटी"</string>
+    <string name="accessibility_hac_mode_title" msgid="2037950424429555652">"हियरिङ डिभाइस कम्प्याटिबिलिटी"</string>
     <string name="accessibility_hac_mode_summary" msgid="5198760061256669067">"टेलिकोइलसँग अझ राम्रोसँग काम गर्ने बनाउँछ र अनावश्यक आवाज कम गर्छ"</string>
     <string name="accessibility_hearing_device_about_title" msgid="7883758309646288250">"श्रवण यन्त्रहरूका बारेमा"</string>
     <string name="accessibility_hearing_device_footer_summary" msgid="7451899224828040581">"तपाईंको हियरिङ डिभाइस अन गरिएको छ र अब त्यसमा कनेक्ट गर्न मिल्छ भन्ने कुरा सुनिश्चित गर्नुहोस्"</string>
