--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -118,11 +118,11 @@
     <string name="connected_device_previously_connected_screen_title" msgid="8823331744788100605">"Раней падключаныя"</string>
     <string name="connected_device_bluetooth_turned_on_toast" msgid="144664089794199928">"Bluetooth уключаны"</string>
     <string name="previous_connected_see_all" msgid="7759413145713251328">"Паказаць усе"</string>
-    <string name="stylus_device_details_title" msgid="7618295136015480864">"Стылус"</string>
+    <string name="stylus_device_details_title" msgid="7618295136015480864">"Пяро"</string>
     <string name="stylus_default_notes_app" msgid="3896158797687806941">"Стандартныя праграмы для стварэння нататак"</string>
     <string name="stylus_textfield_handwriting" msgid="2363579035338976327">"Увод тэксту ў тэкставыя палі"</string>
-    <string name="stylus_ignore_button" msgid="7734540973145241391">"Ігнараваць націсканні кнопак стілусам"</string>
-    <string name="stylus_connected_devices_title" msgid="2823967577941359812">"Стылус"</string>
+    <string name="stylus_ignore_button" msgid="7734540973145241391">"Ігнараваць націсканні кнопак пяром"</string>
+    <string name="stylus_connected_devices_title" msgid="2823967577941359812">"Пяро"</string>
     <string name="date_and_time" msgid="1788358029823431692">"Дата і час"</string>
     <string name="proxy_settings_title" msgid="4201866858226087066">"Проксі-сервер"</string>
     <string name="proxy_clear_text" msgid="6529658759984031149">"Ачысціць"</string>
