--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -1047,7 +1047,7 @@
     <string name="dark_ui_text" msgid="4392646155331126666">"រចនាប័ទ្មងងឹត​ប្រើផ្ទៃខាងក្រោយ​ពណ៌ខ្មៅ ដើម្បីជួយ​រក្សាថាមពលថ្ម​ឱ្យនៅបានយូរ​ជាងមុន​នៅលើអេក្រង់​មួយចំនួន។ កាលវិភាគ​រចនាប័ទ្មងងឹត​រង់ចាំបើក រហូតទាល់តែ​អេក្រង់​របស់អ្នក​ត្រូវបានបិទ។"</string>
     <string name="dark_ui_bedtime_footer_summary" msgid="5576501833145170581">"បច្ចុប្បន្ន រចនាប័ទ្ម​ងងឹត​កំពុងអនុវត្តតាម​កាលវិភាគមុខងារ​ម៉ោងគេងរបស់អ្នក"</string>
     <string name="dark_ui_bedtime_footer_action" msgid="1493095487994054339">"ការកំណត់​មុខងារ​ម៉ោង​គេង"</string>
-    <string name="screen_timeout" msgid="7709947617767439410">"រយៈពេលបិទអេក្រង់"</string>
+    <string name="screen_timeout" msgid="7709947617767439410">"រយៈពេលទម្រាំអេក្រង់បិទ"</string>
     <string name="screen_timeout_summary" msgid="5558778019594643427">"បន្ទាប់​ពី​អសកម្ម <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g>"</string>
     <string name="screen_timeout_summary_not_set" msgid="5107680774964178875">"មិនបានកំណត់"</string>
     <string name="wallpaper_settings_title" msgid="5635129851136006383">"ផ្ទាំង​រូបភាព"</string>
